# argus

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  UPGRADE.md  build.rs  clippy.toml
assets/fonts/: README.md
assets/icons/: README.md
docs/: ai_log_agent_design.md  argus_software_overview.md
resources/macos/: AppIcon.icns  Info.plist
resources/windows/: app.rc
scripts/: build_windows_x64.sh  generate_icons.sh  generate_upgrade_package.sh  package_macos.sh  package_windows.ps1  package_windows.sh
src/: app.rs  assets.rs  bootstrap.rs  connections.rs  fonts.rs  jstack_analysis.rs  lib.rs  main.rs  perf.rs  runtime_analysis.rs  sftp.rs  terminal.rs  text_selection.rs  types.rs  updater.rs
src/agent/: advanced_tools.rs  credential.rs  mod.rs  model_gateway.rs  orchestrator.rs  report.rs  runtime.rs  session.rs  source_scan.rs  tools.rs
src/analysis/: jstack.rs  mod.rs  runtime.rs  source_input.rs
src/app/: agent_actions.rs  connection_actions.rs  constants.rs  jstack_actions.rs  jstack_state.rs  log_search.rs  log_search_actions.rs  log_state.rs  log_text.rs  menu_actions.rs  placeholder_data.rs  remote_state.rs  runtime_actions.rs  runtime_state.rs  search_state.rs  settings_actions.rs  settings_window.rs  sftp_actions.rs  source_picker.rs  source_picker_actions.rs  source_search.rs  source_search_actions.rs  source_tree_actions.rs  terminal_actions.rs  tests.rs  text_input.rs  text_input_actions.rs  types.rs  upgrade_actions.rs
src/app/remote/: connection_actions.rs  mod.rs  remote_file_actions.rs  sftp_actions.rs  terminal_actions.rs
src/config/: ai_config.rs  app_config.rs  config_manager.rs  mod.rs  paths.rs
src/highlight/: cache.rs  highlighter.rs  language.rs  mod.rs  span.rs  tests.rs
src/highlight/rules/: code_common.rs  common.rs  css.rs  java.rs  java_thread.rs  javascript.rs  json.rs  jsp.rs  log.rs  mod.rs  properties.rs  shell.rs  sql.rs  xml.rs  yaml.rs
src/infra/: mod.rs  perf.rs  text_input.rs  text_selection.rs  updater.rs
src/loader/: credential_store.rs  dir_tree.rs  file_watcher.rs  log_source.rs  mod.rs  path_browser.rs  source_registry.rs  spool_manager.rs
src/loader/archive/: adapter.rs  compressed_tar.rs  detector.rs  gzip_adapter.rs  mod.rs  password.rs  rar_adapter.rs  registry.rs  sevenz_adapter.rs  tar_adapter.rs  unsupported.rs  zip_adapter.rs
src/platform/: custom_titlebar.rs  external_sources.rs  mod.rs  open_with_registration.rs
src/reader/: backend.rs  decoder.rs  encoding_detector.rs  line_index.rs  log_file_reader.rs  mmap_backend.rs  mod.rs  page_info.rs  read_mode.rs  spooled_backend.rs  stream_backend.rs
src/remote/: connection.rs  git.rs  mod.rs  remote_file.rs  sftp.rs  ssh.rs  svn.rs  svn_http.rs  terminal.rs
src/search/: filter.rs  mod.rs  regex_cache.rs  search_engine.rs  search_task.rs
src/theme/: mod.rs  system_theme.rs  theme.rs  theme_manager.rs
src/theme/builtin/: dark.rs  light.rs  mod.rs
src/ui/: activity_bar.rs  agent_dialog.rs  agent_window.rs  ai_settings_editor.rs  archive_password_dialog.rs  connection_dialog.rs  connection_tree_panel.rs  custom_title_bar.rs  dir_tree_panel.rs  file_preview_window.rs  highlight_colors.rs  input_native.rs  jstack_analysis_view.rs  jstack_thread_detail_window.rs  log_content_view.rs  log_search_window.rs  main_window.rs  mod.rs  placeholder_dialog.rs  remote_file_dialog.rs  remote_file_manager_view.rs  runtime_analysis_view.rs  settings_modal.rs  settings_page.rs  settings_view.rs  settings_window.rs  sftp_dialog.rs  sftp_file_manager_view.rs  source_panel.rs  source_picker.rs  source_resizer.rs  status_bar.rs  tab_bar.rs  terminal_view.rs  toolbar.rs  upgrade_dialog.rs
src/ui/components/: centered_message.rs  context_menu.rs  datetime_picker.rs  dropdown.rs  icon.rs  icon_button.rs  input.rs  input_behavior.rs  loading_spinner.rs  markdown.rs  mod.rs  modal_dialog.rs  scrollbar.rs  search_box.rs  split_pane.rs  tree_view.rs  virtual_list.rs  window_title_bar.rs
src/ui/log_content_view/: log_lines.rs  scrollbars.rs  search_results.rs  text_helpers.rs
src/ui/runtime_analysis_view/: computation.rs  filter_bar.rs  helpers.rs  sql_dialog.rs  table_parts.rs  tables.rs
src/utils/: async_task.rs  mod.rs  path.rs  size_format.rs  time_format.rs
themes/: dark.toml  light.toml
