# 文件职责：定义 Argus 桌面客户端的 Cargo 包信息与依赖版本。
# 创建日期：2026-06-09
# 修改日期：2026-07-16
# 作者：Argus 开发团队
# 主要功能：配置 Rust 版本、包元信息以及 GPUI 界面依赖。

[package]
name = "argus"
version = "0.1.0"
edition = "2024"
publish = false
description = "Argus 高性能日志查看与分析桌面客户端"

[lints.rust]
unreachable_pub = "warn"

[dependencies]
anyhow = "1.0.102"
async-channel = "2.5.0"
base64 = "0.22.1"
bzip2 = "0.6.1"
chardetng = "1.0.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
ed25519-dalek = "2.2.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
# 消费 Rig 的多轮流式响应，并把思考和正文增量分批转发到 GPUI。
futures = "0.3.32"
# GPUI 0.2.2 在 macOS 默认会调用完整 Xcode 的 metal 工具预编译 shader。
# 当前开发环境只有 Command Line Tools，因此启用 runtime_shaders 让 cargo check 可在本机完成。
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
hex = "0.4.3"
icondata = { version = "0.7.0", default-features = false, features = ["lucide"] }
keyring = "4.1.5"
memmap2 = "0.9.10"
percent-encoding = "2.3.2"
# 使用成熟的 CommonMark/GFM 事件解析器驱动 AI 消息 Markdown 展示，关闭未使用的 HTML 输出功能。
pulldown-cmark = { version = "0.13.4", default-features = false }
rars = "0.2.0"
regex = "1.12.3"
# Rig 使用 reqwest 发送 OpenAI 兼容请求；直接依赖用于设置每次模型请求的超时。
reqwest = "0.13.4"
rig-core = "=0.40.0"
roxmltree = "0.20.0"
schemars = "1.2.1"
# SVN SSH 主机指纹预检直接复用与 svn crate 相同的纯 Rust russh 栈，不启动系统 ssh。
russh = { version = "0.62.2", default-features = false, features = ["ring", "rsa"] }
self-replace = "1.5.0"
semver = "1.0.28"
sevenz-rust = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
secrecy = "0.10.3"
sha2 = "0.10.9"
# 0.13 使用稳定版 aes 0.9，与 svn 的 russh 加密栈兼容；API 保持现有 SMB 行为不变。
smb2 = "0.13.0"
# SVN 的 svn/svn+ssh 传输使用纯 Rust ra_svn，HTTP(S) 只读传输使用内置 DAV 客户端；
# ssh 特性通过 russh 建立隧道，不调用本机 svn/ssh，也不启用系统 libsasl2。
svn = { version = "0.1.13", features = ["ssh"] }
tar = "0.4.46"
thiserror = "2.0.18"
toml = "0.8.23"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync", "fs"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tempfile = "3.27.0"
# SVN HTTPS 使用操作系统信任根，兼容由企业 CA 签发且已安装到系统证书库的内网仓库。
ureq = { version = "2.12.1", features = ["native-certs"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
vt100 = "0.16.2"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate64", "deflate", "lzma", "ppmd", "time", "zstd", "xz"] }

[target.'cfg(windows)'.dependencies]
# Windows 由 libgit2 使用平台原生 TLS/加密能力，避免引入额外 OpenSSL 动态库。
git2 = { version = "0.21.0", features = ["https", "ssh", "vendored-libgit2"] }
# libssh2 在 Windows 默认使用系统 WinCNG。避免启用 vendored-openssl，才能从非 Windows
# 主机交叉编译 MSVC 目标，同时无需随应用分发额外的 OpenSSL 动态库。
ssh2 = "0.9.5"
raw-window-handle = "0.6.2"
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(windows))'.dependencies]
# macOS/Linux 静态构建 libgit2 与 OpenSSL，确保安装包不依赖目标机预装开发库。
git2 = { version = "0.21.0", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
# macOS/Linux 延续原有的 vendored OpenSSL 策略，避免依赖开发机预装的 OpenSSL 版本。
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

[target.'cfg(target_os = "macos")'.dependencies]
# 主窗口使用透明原生标题栏，需要按视图区分可拖拽空白与标签等交互元素。
block = "0.1.6"
objc = "0.2.7"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry"] }
raw-window-handle = "0.6.2"

[build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
# 标题栏和模态框等 GPUI 交互需要真实 hitbox/input 回归测试，测试构建开启官方测试上下文。
gpui = { version = "0.2.2", features = ["runtime_shaders", "test-support"] }
wiremock = "0.6.5"

[patch.crates-io]
# GPUI 0.2.2 的 Windows release shader 构建仅能在 Windows 主机运行；本地补丁复用
# runtime_shaders 特性，将内嵌 HLSL 交给 Windows D3DCompiler，支持 macOS/Linux 交叉编译。
gpui = { path = "third_party/gpui" }
# Git/SVN 引入后，SMB 与 russh 统一使用稳定版 aes 0.9；本地补丁让压缩格式实现复用同一版本，
# 避免 Cargo 在同一个 0.9 系列中混用预发布版，同时保留现有 ZIP/RAR AES 解密能力。
rars-crypto = { path = "third_party/rars-crypto" }
zip = { path = "third_party/zip" }
# svn 仍保持 0.1.13 API；本地补丁仅升级其纯 Rust russh 传输依赖，统一稳定加密栈。
svn = { path = "third_party/svn" }
